--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/dirkliu/grunt-demo#readme",
   "devDependencies": {
     "grunt": "^1.0.4",
+    "grunt-contrib-uglify": "^4.0.1",
     "grunt-versionjson": "^0.1.4"
   }
 }
